# hackathon-llm-x-law

./: app.py  companies_data.json  pyproject.toml  requirements.txt
services/: company_products.json  openai_service.py  product_extractor.py  ticker_evaluation.py
src/config/: settings.py
src/models/: message.py
utils/: constants.py
