[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Moncif"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.54.4"
streamlit = "^1.40.1"
python-dotenv = "^1.0.1"
trafilatura = "^1.12.2"
bs4 = "^0.0.2"
duckduckgo-search = "^6.3.5"
yfinance = "^0.2.49"
yahoo-fin = "^0.8.9.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
